; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_error.c_Error_value.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_error.c_Error_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@JS_E_FUNCTION_EXPECTED = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"unimplemented flags %x\0A\00", align 1
@E_NOTIMPL = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*, i32*)* @Error_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Error_value(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %14 = call i32 @TRACE(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* %10, align 4
  switch i32 %15, label %20 [
    i32 128, label %16
  ]

16:                                               ; preds = %6
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* @JS_E_FUNCTION_EXPECTED, align 4
  %19 = call i32 @throw_type_error(i32* %17, i32 %18, i32* null)
  store i32 %19, i32* %7, align 4
  br label %24

20:                                               ; preds = %6
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @FIXME(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %23 = load i32, i32* @E_NOTIMPL, align 4
  store i32 %23, i32* %7, align 4
  br label %24

24:                                               ; preds = %20, %16
  %25 = load i32, i32* %7, align 4
  ret i32 %25
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @throw_type_error(i32*, i32, i32*) #1

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
